clang/test/Ripple/ripple-parallel/thread-vector-expansion-not-sese.c
// NOTE: Assertions have been autogenerated by utils/update_cc_test_checks.py UTC_ARGS: --version 6
// REQUIRES: target=hexagon{{.*}}
// RUN: %clang -ffreestanding -S -g -O2 -emit-llvm -fenable-ripple %s -o %t.pragma.out -DUSING_PRAGMA=1 2> %t.pragma.err; FileCheck %s --input-file=%t.pragma.err
// RUN: %clang -ffreestanding -S -g -O2 -emit-llvm -fenable-ripple %s -o %t.out 2> %t.err; FileCheck %s --input-file=%t.err

#include "../ripple_test.h"


void check(int Chunk, int64_t N, int32_t start, int64_t end, float x[restrict N],
           float y[restrict N], float xpy[restrict N]) {
  ripple_thd_block_t ThreadBlockT = ripple_thd_init(0, NULL);
  ripple_block_t BSV = ripple_set_block_shape(0, 16);
  #ifdef USING_PRAGMA
  #pragma ripple parallel Block(ThreadBlockT) Dims(0) ThreadChunk(Chunk)
  #pragma ripple parallel Block(BSV) Dims(0)
  #else
  ripple_parallel_thd_chunk(ThreadBlockT, Chunk, 0);
  ripple_parallel(BSV, 0);
  #endif
  for (int i = start; i < end; ++i) {
    xpy[i] = x[i] + y[i];
    if (xpy[i] < 32.f)
      break;
  }
}

void check2(int Chunk, int64_t N, int32_t start, int64_t end, float x[restrict N],
            float y[restrict N], float xpy[restrict N]) {
  ripple_thd_block_t ThreadBlockT = ripple_thd_init(0, NULL);
  ripple_block_t BSV = ripple_set_block_shape(0, 16);
  #ifdef USING_PRAGMA
  #pragma ripple parallel Block(ThreadBlockT) Dims(0) ThreadChunk(Chunk)
  #pragma ripple parallel Block(BSV) Dims(0) NoRemainder
  #else
  ripple_parallel_thd_chunk(ThreadBlockT, Chunk, 0);
  ripple_parallel_full(BSV, 0);
  #endif
  for (int i = start; i < end; ++i) {
    xpy[i] = x[i] + y[i];
    if (xpy[i] < 32.f)
      break;
  }
}

void check3(int Chunk, int64_t N, int32_t start, int64_t end, float x[restrict N],
            float y[restrict N], float xpy[restrict N]) {
  ripple_thd_block_t ThreadBlockT = ripple_thd_init(0, NULL);
  ripple_block_t BSV = ripple_set_block_shape(0, 16);
  #ifdef USING_PRAGMA
  #pragma ripple parallel Block(ThreadBlockT) Dims(0) ThreadChunk(Chunk)
  #pragma ripple parallel Block(BSV) Dims(0) BlockIndependent
  #else
  ripple_parallel_thd_chunk(ThreadBlockT, Chunk, 0);
  ripple_parallel_peel(BSV, 0);
  #endif
  for (int i = start; i < end; ++i) {
    xpy[i] = x[i] + y[i];
    if (xpy[i] < 32.f)
      break;
  }
}

// CHECK:      thread-vector-expansion-not-sese.c:58:16: error: ripple cannot vectorize the vector branch because it applies to a non single-entry-single-exit (SESE) region
// CHECK-NEXT:    58 |     if (xpy[i] < 32.f)
// CHECK-NEXT:       |                ^

// CHECK:      thread-vector-expansion-not-sese.c:40:16: error: ripple cannot vectorize the vector branch because it applies to a non single-entry-single-exit (SESE) region
// CHECK-NEXT:    40 |     if (xpy[i] < 32.f)
// CHECK-NEXT:       |                ^

// CHECK:      thread-vector-expansion-not-sese.c:22:16: error: ripple cannot vectorize the vector branch because it applies to a non single-entry-single-exit (SESE) region
// CHECK-NEXT:    22 |     if (xpy[i] < 32.f)
// CHECK-NEXT:       |                ^
